[package]
name = "cqlite"
description = "An embedded property graph database."
keywords = ["database", "graph", "cypher", "gql", "acid"]
categories = ["database", "database-implementations"]
version = "0.2.2"
edition = "2018"
repository = "https://github.com/dyedgreen/cqlite"
license = "MIT"
exclude = [".*"]

[features]
ffi = []

[lib]
crate_type = ["lib", "staticlib", "cdylib"]

[dependencies]
bincode = "1.3.3"
peg = "0.7.0"
sanakirja-core = "=1.2.16"
sanakirja = "=1.2.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

minicbor = {git='https://github.com/jredrado/minicbor.git', branch="master", version="0.11.1", default-features = false, features = ["alloc","derive"]}

nanoserde = {version="0.1.29", git="https://github.com/jredrado/nanoserde.git",branch="master"}

monotree = {version="0.1.4", git="https://github.com/jredrado/monotree.git", branch="master",features = ["db_sled"]}

collecting-hashmap = "0.2.0"
petgraph = "0.6.2"

[dev-dependencies]
corepack = { version="0.4.1"}
criterion = { version = "0.3", features = ["html_reports"] }
inline-c = "0.1"
authcomp = { path = "../urschain/src/authcomp", version = "0.1.0"}

[build-dependencies]
cbindgen = "0.20"

[[bench]]
name = "basic_queries"
harness = false
[[bench]]
name = "match_queries"
harness = false
